syntax = "proto3";

package result;

option go_package = "github.com/j-haj/bdl/result";

message Result {
  string destination = 1;
  bytes result_obj = 2;
}